# carla_ros_bridge_pnc

./: .gitignore  README.md
controller/: CMakeLists.txt  README.md  package.xml
controller/config/: controller_config.yaml
controller/include/: controller.h  controller_node.h
controller/launch/: controller.launch  controller_debug.launch  controller_demo.launch
controller/rviz/: control.rviz
controller/src/: controller.cpp  controller_main.cpp  controller_node.cpp
planning/: CMakeLists.txt  README.md  package.xml
planning/config/: em_planner.yaml  lattice_planner.yaml  reference_line.yaml
planning/include/: common.h  planning_node.h  point_types.h
planning/include/collision_detection/: collision_detection.h
planning/include/em_planner/: em_planner.h
planning/include/lattice_planner/: lattice_planner.h
planning/include/polynomial/: quartic_polynomial copy.hpp  quartic_polynomial.hpp  quintic_polynomial.hpp
planning/include/reference_line/: cubic_spline.hpp  reference_line.h
planning/launch/: planning.launch  planning_and_control.launch  planning_debug.launch  planning_demo.launch
planning/rviz/: planning.rviz
planning/src/: common.cpp  cruise_speed_pub.cpp  planning_main.cpp  planning_node.cpp
planning/src/collision_detection/: collision_detection.cpp
planning/src/em_planner/: em_planner.cpp
planning/src/lattice_planner/: lattice_planner.cpp
planning/src/reference_line/: reference_line.cpp
scripts/: quickly_setup.sh  workspace.rosinstall
waypoint_msgs/: CMakeLists.txt  package.xml
